--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,8 @@ section .filter-card {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+     padding: 10px;
 }
 
 .search-input {
@@ -155,6 +157,14 @@ section .filter-card {
     border: none;
     border-radius: 4px 0px 0px 4px;
     text-indent: 10px;
+}
+
+.search-input2 {
+  width: 300px;
+  height: 50px;
+  border: none;
+  border-radius: 4px 0px 0px 4px;
+  text-indent: 10px;
 }
 
 .search-button {
